# slides-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
src/ppt_agent/: __init__.py  agent.py
src/ppt_agent/graph/: __init__.py  nodes.py  state.py  workflow.py
src/ppt_agent/prompts/: __init__.py  templates.py  templates_esp.py
src/ppt_agent/schemas/: __init__.py  slides.py
src/ppt_agent/services/: .gitignore  __init__.py  google_slides.py
